--- a/html-templates/signup-page.html
+++ b/html-templates/signup-page.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Petstagram - Sign Up
+    Petstagram - Sign-up
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -16,15 +16,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
   <link href="./assets/css/material-kit.css?v=2.0.5" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="./assets/demo/demo.css" rel="stylesheet" />
+  <link href="./assets/css/style.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lato|Pacifico|Roboto" rel="stylesheet">
 </head>
 
-<body class="index-page sidebar-collapse">
+<body class="login-page sidebar-collapse">
   <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="./landingpage.html"> <i class="fas fa-paw"></i>
+        <a class="navbar-brand font-pacifico" href="#"> <i class="fas fa-paw"></i>
           Petstagram </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
@@ -40,10 +40,10 @@
               <i class="material-icons">apps</i> About Us
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="./index.html" class="dropdown-item">
+              <a href="#" class="dropdown-item">
                 <i class="material-icons">layers</i> App Design
               </a>
-              <a href="https://demos.creative-tim.com/material-kit/docs/2.1/getting-started/introduction.html" class="dropdown-item">
+              <a href="#" class="dropdown-item">
                 <i class="material-icons">group</i> Meet the Devs
               </a>
             </div>
@@ -53,7 +53,7 @@
               <i class="material-icons">cloud_download</i> Download (iOS)
             </a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
               <i class="fa fa-twitter"></i>
             </a>
@@ -62,111 +62,103 @@
             <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
               <i class="fa fa-facebook"></i>
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/sgenini/projectTwo" target="_blank" data-original-title="Check out our GitHub Repo">
-                <i class="fa fa-github-alt"></i>
+                <i class="fa fa-github-alt"></i> GitHub Repo
             </a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="page-header header-filter clear-filter purple-filter" data-parallax="false" style="background-image: url('./assets/img/bg.jpg');">
-      <div class="container text-center">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 ml-auto mr-auto mt-5">
-                <div class="card card-login">
-                <form class="form" method="" action="">
-                    <div class="card-header card-header-primary text-center">
-                    <h4 class="card-title">Sign-Up</h4>
-                    <div class="social-line">
-                        <a href="#pablo" class="btn btn-just-icon btn-link">
-                        <i class="fa fa-facebook-square"></i>
-                        </a>
-                        <a href="#pablo" class="btn btn-just-icon btn-link">
-                        <i class="fa fa-twitter"></i>
-                        </a>
-                        <a href="#pablo" class="btn btn-just-icon btn-link">
-                        <i class="fa fa-google-plus"></i>
-                        </a>
-                    </div>
-                    </div>
-                    <p class="description text-center">Or Be Classical</p>
+
+  <div class="page-header header-filter" data-parallax="false" style="background-image: url('./assets/img/bg4.jpg'); background-size: cover; background-position: top center;">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mx-auto">
+          <div class="card card-login login-card">
+            <form class="form" method="" action="">
+              <div class="card-header card-header-primary text-center">
+                <h4 class="card-title font-lato remove-mb drop-shadow">Create account for</h4>
+                <h3 class="font-pacifico drop-shadow">Petstagram</h3>
+                  <div class="social-line mt-1 remove-mb">
+                    <a href="#pablo" class="btn btn-just-icon btn-link">
+                    <i class="fa fa-facebook-square"></i>
+                    </a>
+                    <a href="#pablo" class="btn btn-just-icon btn-link">
+                    <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#pablo" class="btn btn-just-icon btn-link">
+                    <i class="fa fa-google-plus"></i>
+                    </a>
+                  </div>
+                </div>
+                  <!-- <p class="description text-center remove-mb">Petstagram Account Login</p> -->
                     <div class="card-body">
-                    <div class="input-group">
+                      <div class="input-group mt-4">
                         <div class="input-group-prepend">
-                        <span class="input-group-text">
+                          <span class="input-group-text">
                             <i class="material-icons">face</i>
-                        </span>
+                          </span>
                         </div>
-                        <input type="text" class="form-control" placeholder="First Name...">
-                    </div>
-                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Full Name...">
+                      </div>
+                      <div class="input-group mt-3">
                         <div class="input-group-prepend">
-                        <span class="input-group-text">
+                          <span class="input-group-text">
                             <i class="material-icons">mail</i>
-                        </span>
+                          </span>
                         </div>
-                        <input type="email" class="form-control" placeholder="Email...">
-                    </div>
-                    <div class="input-group">
+                          <input type="email" class="form-control" placeholder="Email Address...">
+                      </div>
+                      <div class="input-group mt-3">
                         <div class="input-group-prepend">
-                        <span class="input-group-text">
+                          <span class="input-group-text">
                             <i class="material-icons">lock_outline</i>
-                        </span>
+                          </span>
                         </div>
                         <input type="password" class="form-control" placeholder="Password...">
+                      </div>
                     </div>
-                    </div>
-                    <div class="footer text-center">
-                    <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">Get Started</a>
-                    </div>
-                </form>
-                </div>
+                  <div class="footer text-center">
+                    <a href="#pablo" class="btn btn-primary btn-wd btn-lg">Sign up</a> <br>
+                    <a href="./login-page.html" class="btn btn-primary btn-link btn-wd btn-sm">Have an account? Log in!</a>
+                  </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-md-12 text-center">
-      <a href="examples/login-page.html" class="btn btn-link btn-primary btn-lg" target="_blank">View Login Page</a>
-    </div>
-    
-  <footer class="footer" data-background-color="black">
-    <div class="container">
-      <nav class="float-left">
-        <ul>
-          <li>
-            <a href="https://www.creative-tim.com">
-              Creative Tim
-            </a>
-          </li>
-          <li>
-            <a href="https://creative-tim.com/presentation">
-              About Us
-            </a>
-          </li>
-          <li>
-            <a href="http://blog.creative-tim.com">
-              Blog
-            </a>
-          </li>
-          <li>
-            <a href="https://www.creative-tim.com/license">
-              Licenses
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright float-right">
-        &copy;
-        <script>
-          document.write(new Date().getFullYear())
-        </script>, made with <i class="material-icons">favorite</i> by
-        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-      </div>
-    </div>
-  </footer>
+
+    <footer class="footer">
+        <div class="container">
+          <nav class="float-left">
+            <ul>
+              <li>
+                <a href="#">
+                  About Us
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Sign Up
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="copyright float-right font-roboto text-uppercase">
+            &copy;
+            <script>
+              document.write(new Date().getFullYear())
+            </script>, Petstagram.
+          </div>
+        </div>
+      </footer>
+  </div>
+
+
   <!--   Core JS Files   -->
   <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
   <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
@@ -181,77 +173,75 @@
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
   <script src="./assets/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
   <script>
-    $(document).ready(function() {
+  $(document).ready(function() {
       //init DateTimePickers
       materialKit.initFormExtendedDatetimepickers();
 
       // Sliders Init
       materialKit.initSliders();
-    });
+  });
 
 
-    function scrollToDownload() {
+  function scrollToDownload() {
       if ($('.section-download').length != 0) {
-        $("html, body").animate({
+      $("html, body").animate({
           scrollTop: $('.section-download').offset().top
-        }, 1000);
+      }, 1000);
       }
-    }
+  }
 
 
-    $(document).ready(function() {
-
-      $('#facebook').sharrre({
-        share: {
+  $(document).ready(function() {
+    $('#facebook').sharrre({
+      share: {
           facebook: true
-        },
-        enableHover: false,
-        enableTracking: false,
-        enableCounter: false,
-        click: function(api, options) {
+      },
+      enableHover: false,
+      enableTracking: false,
+      enableCounter: false,
+      click: function(api, options) {
           api.simulateClick();
           api.openPopup('facebook');
-        },
-        template: '<i class="fab fa-facebook-f"></i> Facebook',
-        url: 'https://demos.creative-tim.com/material-kit/index.html'
+      },
+      template: '<i class="fab fa-facebook-f"></i> Facebook',
+      url: 'https://demos.creative-tim.com/material-kit/index.html'
       });
 
-      $('#googlePlus').sharrre({
-        share: {
+    $('#googlePlus').sharrre({
+      share: {
           googlePlus: true
-        },
-        enableCounter: false,
-        enableHover: false,
-        enableTracking: true,
-        click: function(api, options) {
+      },
+      enableCounter: false,
+      enableHover: false,
+      enableTracking: true,
+      click: function(api, options) {
           api.simulateClick();
           api.openPopup('googlePlus');
-        },
-        template: '<i class="fab fa-google-plus"></i> Google',
-        url: 'https://demos.creative-tim.com/material-kit/index.html'
+      },
+      template: '<i class="fab fa-google-plus"></i> Google',
+      url: 'https://demos.creative-tim.com/material-kit/index.html'
       });
 
-      $('#twitter').sharrre({
-        share: {
+    $('#twitter').sharrre({
+      share: {
           twitter: true
-        },
-        enableHover: false,
-        enableTracking: false,
-        enableCounter: false,
-        buttons: {
+      },
+      enableHover: false,
+      enableTracking: false,
+      enableCounter: false,
+      buttons: {
           twitter: {
-            via: 'CreativeTim'
+          via: 'CreativeTim'
           }
-        },
-        click: function(api, options) {
-          api.simulateClick();
-          api.openPopup('twitter');
-        },
-        template: '<i class="fab fa-twitter"></i> Twitter',
-        url: 'https://demos.creative-tim.com/material-kit/index.html'
+      },
+    click: function(api, options) {
+      api.simulateClick();
+      api.openPopup('twitter');
+      },
+      template: '<i class="fab fa-twitter"></i> Twitter',
+      url: 'https://demos.creative-tim.com/material-kit/index.html'
       });
-
-    });
+  });
   </script>
 </body>
 
