Modified prototype user profile page to better show the different sections.

--- a/html-templates/user-page.html
+++ b/html-templates/user-page.html
@@ -98,40 +98,65 @@
       </div>
     </div>
     <div class="main main-raised bottom-margin">
-      <div class="row">
+      <div class="row mx-auto">
         <div class="col-lg-12">
           <div class="row">
-            <div class="col-lg-3 mt-3 mr-3 ml-3 mb-3 text-center">
-              <img class="mb-3 rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <a href="#pablo" class="btn btn-primary mr-3"><i class="fa fa-envelope"></i></a>
-              <a href="#pablo" class="btn btn-primary"><i class="fa fa-address-card"></i></a>
+            <div class="col-lg-12">
+              <h2 class="card-title font-lato text-uppercase ml-3">My Pets</h2>
             </div>
-            <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
-              <h2>John Smith <small class="ml-2"><small>Bay Area, CA</small></small></h2>
-              <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu consectetur massa. Phasellus nec velit semper libero commodo vulputate quis sit amet orci. Integer vitae mi lacus. Morbi semper pretium nunc, condimentum pretium metus laoreet ut. Duis vitae lacus ac turpis laoreet mattis eget non est. Aliquam tristique porttitor ullamcorper. Praesent orci justo, mattis nec commodo vitae, iaculis vel leo. Nam at est euismod justo tincidunt sagittis sit amet eget massa. Suspendisse cursus diam sem, quis cursus neque cursus et. Aliquam euismod nulla id libero accumsan, et ullamcorper odio pulvinar. Etiam aliquet urna non tellus mollis condimentum. Donec porttitor rutrum ligula nec tristique. Aenean bibendum metus sit amet libero imperdiet, in aliquet mi blandit. Curabitur sed diam odio. Donec lobortis id lacus quis bibendum.</p>
+          </div>
+          <div class="row">
+            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Mr. Kitty<br style="line-height:0px;" /><small class="ml-2"><small>Domestic Shorthair</small></small></h3>
+            </div>
+            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Roofus<br style="line-height:0px;" /><small class="ml-2"><small>Golden Retriever</small></small></h3>
+            </div>
+            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Polly<br style="line-height:0px;" /><small class="ml-2"><small>Parakeet</small></small></h3>
+            </div>
+            <div class="fix-to-bottom">
+              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see more...</a>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="main main-raised mb-5">
-      <div class="row">
+      <div class="row mx-auto">
         <div class="col-lg-12">
           <div class="row">
-            <div class="col-lg-3 mt-3 mr-3 ml-3 mb-3 text-center">
-              <img class="mb-3 rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <a href="#pablo" class="btn btn-primary mr-3"><i class="fa fa-envelope"></i></a>
-              <a href="#pablo" class="btn btn-primary"><i class="fa fa-address-card"></i></a>
+            <div class="col-lg-12">
+              <h2 class="card-title font-lato text-uppercase ml-3">Communities I Belong To</h2>
             </div>
-            <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
-              <h2>John Smith <small class="ml-2"><small>Bay Area, CA</small></small></h2>
-              <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu consectetur massa. Phasellus nec velit semper libero commodo vulputate quis sit amet orci. Integer vitae mi lacus. Morbi semper pretium nunc, condimentum pretium metus laoreet ut. Duis vitae lacus ac turpis laoreet mattis eget non est. Aliquam tristique porttitor ullamcorper. Praesent orci justo, mattis nec commodo vitae, iaculis vel leo. Nam at est euismod justo tincidunt sagittis sit amet eget massa. Suspendisse cursus diam sem, quis cursus neque cursus et. Aliquam euismod nulla id libero accumsan, et ullamcorper odio pulvinar. Etiam aliquet urna non tellus mollis condimentum. Donec porttitor rutrum ligula nec tristique. Aenean bibendum metus sit amet libero imperdiet, in aliquet mi blandit. Curabitur sed diam odio. Donec lobortis id lacus quis bibendum.</p>
+          </div>
+          <div class="row">
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Dog Food<br style="line-height:0px;" /><small class="ml-2"><small>Oakland, CA</small></small></h3>
+            </div>
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Jog Dogs SF<br style="line-height:0px;" /><small class="ml-2"><small>San Francisco, CA</small></small></h3>
+            </div>
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Birb Cage<br style="line-height:0px;" /><small class="ml-2"><small>Berkeley, CA</small></small></h3>
+            </div>
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Cats in Hats<br style="line-height:0px;" /><small class="ml-2"><small>Global</small></small></h3>
+            </div>
+            <div class="fix-to-bottom">
+              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see more...</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
     <footer class="footer fixed-footer">
       <div class="container">
