Also fixed signup footer to match rest of site

--- a/html-templates/signup-page.html
+++ b/html-templates/signup-page.html
@@ -148,7 +148,7 @@
               </li>
             </ul>
           </nav>
-          <div class="copyright float-right font-roboto text-uppercase">
+          <div class="copyright float-right font-roboto text-uppercase"><small class="font-white">
             &copy;
             <script>
               document.write(new Date().getFullYear())
