Add community page template, small fixes for login/signup/user pages

--- a/html-templates/signup-page.html
+++ b/html-templates/signup-page.html
@@ -82,7 +82,7 @@
               <div class="card-header card-header-primary text-center">
                 <h4 class="card-title font-lato remove-mb drop-shadow">Create account for</h4>
                 <h3 class="font-pacifico drop-shadow">Petstagram</h3>
-                  <div class="social-line mt-1 remove-mb">
+                  <!-- <div class="social-line mt-1 remove-mb">
                     <a href="#pablo" class="btn btn-just-icon btn-link">
                     <i class="fa fa-facebook-square"></i>
                     </a>
@@ -92,11 +92,11 @@
                     <a href="#pablo" class="btn btn-just-icon btn-link">
                     <i class="fa fa-google-plus"></i>
                     </a>
-                  </div>
+                  </div> -->
                 </div>
                   <!-- <p class="description text-center remove-mb">Petstagram Account Login</p> -->
                     <div class="card-body">
-                      <div class="input-group mt-4">
+                      <div class="input-group" style="margin-top: 35px;">
                         <div class="input-group-prepend">
                           <span class="input-group-text">
                             <i class="material-icons">face</i>
