--- a/html-templates/login-page.html
+++ b/html-templates/login-page.html
@@ -82,7 +82,7 @@
               <div class="card-header card-header-primary text-center">
                 <h4 class="card-title font-lato remove-mb drop-shadow">Welcome to</h4>
                 <h3 class="font-pacifico drop-shadow">Petstagram</h3>
-                  <div class="social-line mt-1 remove-mb">
+                  <!-- <div class="social-line mt-1 remove-mb">
                     <a href="#pablo" class="btn btn-just-icon btn-link">
                     <i class="fa fa-facebook-square"></i>
                     </a>
@@ -92,9 +92,9 @@
                     <a href="#pablo" class="btn btn-just-icon btn-link">
                     <i class="fa fa-google-plus"></i>
                     </a>
-                  </div>
+                  </div> -->
                 </div>
-                  <p class="description text-center remove-mb">Petstagram Account Login</p>
+                  <p class="description text-center remove-mb" style="margin-top: 35px;">Petstagram Account Login</p>
                     <div class="card-body mt-3">
                       <div class="input-group">
                         <div class="input-group-prepend">
