prelim user authentication, waiting on front end to connect user input fields

--- a/public/signup-page.html
+++ b/public/signup-page.html
@@ -120,6 +120,14 @@
                         </div>
                         <input type="password" class="form-control" placeholder="Password...">
                       </div>
+                      <div class="input-group mt-4">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text">
+                            <i class="material-icons">autorenew</i>
+                          </span>
+                        </div>
+                        <input type="password" class="form-control" placeholder="Confirm Password">
+                      </div>
                     </div>
                   <div class="footer text-center">
                     <a href="#pablo" class="btn btn-primary btn-wd btn-lg">Sign up</a> <br>
