--- a/public/user-page.html
+++ b/public/user-page.html
@@ -125,7 +125,7 @@
           <div class="row">
             <div class="col-md-3 mx-auto my-auto">
               <a class="nav-link" rel="tooltip" title="" data-placement="top" href="./pet-page.html" data-original-title="Rex">
-                <img class="rounded border border-3 border-purple mb-3" src="https://cdn-01.belfasttelegraph.co.uk/migration_catalog/article35674053.ece/920a9/AUTOCROP/w620/German-Shepherd.jpg"" style="width: 100%">
+                <img class="rounded border border-3 border-purple mb-3" src="https://cdn-01.belfasttelegraph.co.uk/migration_catalog/article35674053.ece/920a9/AUTOCROP/w620/German-Shepherd.jpg" style="width: 100%">
               </a>
             </div>
             <div class="col-md-3 mx-auto my-auto">
@@ -221,67 +221,7 @@
         </div>
       </div>
     </div>
-    
-    <!-- <div class="main main-raised bottom-margin">
-      <div class="row mx-auto">
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-lg-12">
-              <h2 class="card-title font-lato text-uppercase ml-3">My Pets</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Mr. Kitty<br style="line-height:0px;" /><small class="ml-2"><small>Domestic Shorthair</small></small></h3>
-            </div>
-            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Roofus<br style="line-height:0px;" /><small class="ml-2"><small>Golden Retriever</small></small></h3>
-            </div>
-            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Polly<br style="line-height:0px;" /><small class="ml-2"><small>Parakeet</small></small></h3>
-            </div>
-            <div class="fix-to-bottom">
-              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see more...</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="main main-raised mb-5">
-      <div class="row mx-auto">
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-lg-12">
-              <h2 class="card-title font-lato text-uppercase ml-3">Communities I Belong To</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Dog Food<br style="line-height:0px;" /><small class="ml-2"><small>Oakland, CA</small></small></h3>
-            </div>
-            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Jog Dogs SF<br style="line-height:0px;" /><small class="ml-2"><small>San Francisco, CA</small></small></h3>
-            </div>
-            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Birb Cage<br style="line-height:0px;" /><small class="ml-2"><small>Berkeley, CA</small></small></h3>
-            </div>
-            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
-              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
-              <h3 class="mb-3">Cats in Hats<br style="line-height:0px;" /><small class="ml-2"><small>Global</small></small></h3>
-            </div>
-            <div class="fix-to-bottom">
-              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see more...</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
+
 
     <footer class="footer fixed-footer">
       <div class="container">
