touched the firebase, still need to connect to routes, esp to grab community ID

--- a/public/community-page.html
+++ b/public/community-page.html
@@ -170,11 +170,11 @@
                     <button type="submit" class="btn btn-light btn-fab btn-raised btn-round">
                       <i class="material-icons">insert_emoticon</i>
                     </button>
-                    <button type="submit" class="btn btn-primary btn-raised btn-round float-right">
+                    <button id="postComment" type="submit" class="btn btn-primary btn-raised btn-round float-right">
                       <i class="material-icons mr-1">insert_comment</i> Submit
                     </button>
                   </div>
-                  <ul class="list-group list-group-flush">
+                  <ul id ="board" class="list-group list-group-flush">
                     <li class="list-group-item border rounded mt-3">
                       <div class="col-lg-7 text-left">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu consectetur massa. Phasellus nec velit semper libero commodo vulputate quis sit amet orci. Integer vitae mi lacus. Morbi semper pretium nunc, condimentum pretium metus laoreet ut.
