--- a/public/signup-page.html
+++ b/public/signup-page.html
@@ -201,57 +201,57 @@
   }
 
 
-  $(document).ready(function() {
-    $('#facebook').sharrre({
-      share: {
-          facebook: true
-      },
-      enableHover: false,
-      enableTracking: false,
-      enableCounter: false,
-      click: function(api, options) {
-          api.simulateClick();
-          api.openPopup('facebook');
-      },
-      template: '<i class="fab fa-facebook-f"></i> Facebook',
-      url: 'https://demos.creative-tim.com/material-kit/index.html'
-      });
+  // $(document).ready(function() {
+  //   $('#facebook').sharrre({
+  //     share: {
+  //         facebook: true
+  //     },
+  //     enableHover: false,
+  //     enableTracking: false,
+  //     enableCounter: false,
+  //     click: function(api, options) {
+  //         api.simulateClick();
+  //         api.openPopup('facebook');
+  //     },
+  //     template: '<i class="fab fa-facebook-f"></i> Facebook',
+  //     url: 'https://demos.creative-tim.com/material-kit/index.html'
+  //     });
 
-    $('#googlePlus').sharrre({
-      share: {
-          googlePlus: true
-      },
-      enableCounter: false,
-      enableHover: false,
-      enableTracking: true,
-      click: function(api, options) {
-          api.simulateClick();
-          api.openPopup('googlePlus');
-      },
-      template: '<i class="fab fa-google-plus"></i> Google',
-      url: 'https://demos.creative-tim.com/material-kit/index.html'
-      });
+  //   $('#googlePlus').sharrre({
+  //     share: {
+  //         googlePlus: true
+  //     },
+  //     enableCounter: false,
+  //     enableHover: false,
+  //     enableTracking: true,
+  //     click: function(api, options) {
+  //         api.simulateClick();
+  //         api.openPopup('googlePlus');
+  //     },
+  //     template: '<i class="fab fa-google-plus"></i> Google',
+  //     url: 'https://demos.creative-tim.com/material-kit/index.html'
+  //     });
 
-    $('#twitter').sharrre({
-      share: {
-          twitter: true
-      },
-      enableHover: false,
-      enableTracking: false,
-      enableCounter: false,
-      buttons: {
-          twitter: {
-          via: 'CreativeTim'
-          }
-      },
-    click: function(api, options) {
-      api.simulateClick();
-      api.openPopup('twitter');
-      },
-      template: '<i class="fab fa-twitter"></i> Twitter',
-      url: 'https://demos.creative-tim.com/material-kit/index.html'
-      });
-  });
+  //   $('#twitter').sharrre({
+  //     share: {
+  //         twitter: true
+  //     },
+  //     enableHover: false,
+  //     enableTracking: false,
+  //     enableCounter: false,
+  //     buttons: {
+  //         twitter: {
+  //         via: 'CreativeTim'
+  //         }
+  //     },
+  //   click: function(api, options) {
+  //     api.simulateClick();
+  //     api.openPopup('twitter');
+  //     },
+  //     template: '<i class="fab fa-twitter"></i> Twitter',
+  //     url: 'https://demos.creative-tim.com/material-kit/index.html'
+  //     });
+  // });
   </script>
 </body>
 
