--- a/public/user-page.html
+++ b/public/user-page.html
@@ -70,7 +70,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./login-page.html">
+            <a class="nav-link" href="/logout">
                 <i class="fas fa-sign-out-alt"></i> Sign Out
             </a>
           </li>
