Changed all references of Petstagram to Pawstagram in all static html files (in case needed for demo)

--- a/public/login-page.html
+++ b/public/login-page.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Petstagram - Login
+    Pawstagram
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand font-pacifico" href="#"> <i class="fas fa-paw"></i>
-          Petstagram </a>
+          Pawstagram </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
@@ -81,7 +81,7 @@
             <form class="form login" method="" action="">
               <div class="card-header card-header-primary text-center">
                 <h4 class="card-title font-lato remove-mb drop-shadow">Welcome to</h4>
-                <h3 class="font-pacifico drop-shadow">Petstagram</h3>
+                <h3 class="font-pacifico drop-shadow">Pawstagram</h3>
                   <!-- <div class="social-line mt-1 remove-mb">
                     <a href="#pablo" class="btn btn-just-icon btn-link">
                     <i class="fa fa-facebook-square"></i>
@@ -94,7 +94,7 @@
                     </a>
                   </div> -->
                 </div>
-                  <p class="description text-center remove-mb" style="margin-top: 35px;">Petstagram Account Login</p>
+                  <p class="description text-center remove-mb" style="margin-top: 35px;">Pawstagram Account Login</p>
                     <div class="card-body mt-3">
                       <div class="input-group">
                         <div class="input-group-prepend">
@@ -145,7 +145,7 @@
             &copy;
             <script>
               document.write(new Date().getFullYear())
-            </script>, Petstagram.</small>
+            </script>, Pawstagram.</small>
           </div>
         </div>
       </footer>
