--- a/public/user-page.html
+++ b/public/user-page.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Petstagram - User Profile
+    Pawstagram - User Profile
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand font-pacifico" href="#"> <i class="fas fa-paw"></i>
-          Petstagram </a>
+          Pawstagram </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
@@ -243,7 +243,7 @@
           &copy;
           <script>
             document.write(new Date().getFullYear())
-          </script>, Petstagram.</small>
+          </script>, Pawstagram.</small>
         </div>
       </div>
     </footer>
