More static html page updates for demo navigation

--- a/public/community-page.html
+++ b/public/community-page.html
@@ -45,10 +45,10 @@
               <i class="material-icons">pets</i> My Pets
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="#" class="dropdown-item">
+              <a href="./pet-page.html" class="dropdown-item">
                 Pet 1
               </a>
-              <a href="#" class="dropdown-item">
+              <a href="./pet-page.html" class="dropdown-item">
                 Pet 2
               </a>
             </div>
@@ -58,13 +58,13 @@
               <i class="material-icons">group_work</i> My Communities
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="#" class="dropdown-item">
+              <a href="./community-page.html" class="dropdown-item">
                 Community 1
               </a>
-              <a href="#" class="dropdown-item">
+              <a href="./community-page.html" class="dropdown-item">
                 Community 2
               </a>
-              <a href="#" class="dropdown-item">
+              <a href="./community-page.html" class="dropdown-item">
                 Community 3
               </a>
             </div>
