--- a/public/home-page.html
+++ b/public/home-page.html
@@ -265,8 +265,7 @@
         <div class="copyright float-right font-roboto text-uppercase"><small class="font-white">
           &copy;
           <script>
-            document.write(new Date().getFullYear())
-          </script>, Pawstagram.</small>
+            document.write(new Date().getFullYear())</script>, Pawstagram.</small>
         </div>
       </div>
     </footer>
@@ -288,76 +287,20 @@
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
   <script src="./assets/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
   <script>
-  $(document).ready(function() {
-      //init DateTimePickers
-      materialKit.initFormExtendedDatetimepickers();
+    $(document).ready(function() {
+        //init DateTimePickers
+        materialKit.initFormExtendedDatetimepickers();
 
-      // Sliders Init
-      materialKit.initSliders();
-  });
-
-
-  function scrollToDownload() {
-      if ($('.section-download').length != 0) {
-      $("html, body").animate({
-          scrollTop: $('.section-download').offset().top
-      }, 1000);
-      }
-  }
-
-
-  $(document).ready(function() {
-    $('#facebook').sharrre({
-      share: {
-          facebook: true
-      },
-      enableHover: false,
-      enableTracking: false,
-      enableCounter: false,
-      click: function(api, options) {
-          api.simulateClick();
-          api.openPopup('facebook');
-      },
-      template: '<i class="fab fa-facebook-f"></i> Facebook',
-      url: 'https://demos.creative-tim.com/material-kit/index.html'
-      });
-
-    $('#googlePlus').sharrre({
-      share: {
-          googlePlus: true
-      },
-      enableCounter: false,
-      enableHover: false,
-      enableTracking: true,
-      click: function(api, options) {
-          api.simulateClick();
-          api.openPopup('googlePlus');
-      },
-      template: '<i class="fab fa-google-plus"></i> Google',
-      url: 'https://demos.creative-tim.com/material-kit/index.html'
-      });
-
-    $('#twitter').sharrre({
-      share: {
-          twitter: true
-      },
-      enableHover: false,
-      enableTracking: false,
-      enableCounter: false,
-      buttons: {
-          twitter: {
-          via: 'CreativeTim'
-          }
-      },
-    click: function(api, options) {
-      api.simulateClick();
-      api.openPopup('twitter');
-      },
-      template: '<i class="fab fa-twitter"></i> Twitter',
-      url: 'https://demos.creative-tim.com/material-kit/index.html'
-      });
-  });
-  </script>
+        // Sliders Init
+        materialKit.initSliders();
+    });
+    function scrollToDownload() {
+        if ($('.section-download').length != 0) {
+        $("html, body").animate({
+            scrollTop: $('.section-download').offset().top
+        }, 1000);
+        }
+    }
+</script>
 </body>
-
 </html>
